[gd_scene load_steps=4 format=3 uid="uid://ldr646pt22cc"]

[ext_resource type="Script" path="res://Assets/Scripts/bullet.gd" id="1_gdp1m"]
[ext_resource type="Texture2D" uid="uid://cj5n7aypp5nyx" path="res://Assets/Sprite/Bullet/laserRed04.png" id="2_a768d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5rqjw"]
radius = 6.0
height = 36.0

[node name="EnemyBullet" type="Area2D" groups=["EnemyBullet"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_gdp1m")
speed = Vector2(0, -300)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_a768d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5rqjw")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
